BUG 11: A tabela foi centralizada fazendo uso de margin: 0 auto e text-align center na tag table.

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -111,7 +111,7 @@ div:last-child {
 }
 
 table {
-    width: 70%;
+    width: 50%;
     margin: 0 auto;
     text-align: center;
 }
